--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_IS_DEV = 1
+REACT_APP_IS_DEV = 0
+REACT_APP_RECAPTCHA_SITE_KEY = 6LdkTowjAAAAAP3KahsITHpxUNjrN-Np-wdILaKI
+REACT_APP_RECAPTCHA_SECRET_KEY = 6LdkTowjAAAAANpedcU4x_m8dYIwLVEXzGK-y-6l
